--- a/instituicao/cursos/index.html
+++ b/instituicao/cursos/index.html
@@ -4,12 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link
-        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <script src="https://code.iconify.design/2/2.1.2/iconify.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="../componentes/header/styles_header.css">
@@ -27,7 +24,7 @@
             <img src="../componentes/header/img/grupo_pessoas.svg" alt="grupo_pessoas">
             <h1 id="nomeInstituicao">NOME DA INSTITUIÇÃO</h1>
         </div>
-        
+
         <a href="../index.html">
             <img src="../componentes/header/img/perfil_instituicao.svg" alt="perfil">
         </a>
@@ -163,9 +160,9 @@
 
 
         </div>
-        <div id="novo_curso">
-            <button onclick="showModalCurso()" class="addCurso button5">+</button>
-        </div>
+
+        <button onclick="showModalCurso()" class="addCurso button5"> <i class="fa fa-plus" style="font-size:36px"></i></button>
+
     </div>
 
     <div class="ccontainer modal modal-curso">
