--- a/instituicao/usuarios/cadastro/index.html
+++ b/instituicao/usuarios/cadastro/index.html
@@ -4,12 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link
-        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <script src="https://code.iconify.design/2/2.1.2/iconify.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
@@ -27,7 +24,7 @@
             <img src="../../componentes/header/img/grupo_pessoas.svg" alt="grupo_pessoas">
             <h1 id="nomeInstituicao">NOME DA INSTITUIÇÃO</h1>
         </div>
-        
+
         <a href="../../index.html">
             <img src="../../componentes/header/img/perfil_instituicao.svg" alt="perfil">
         </a>
@@ -45,13 +42,12 @@
             <li id="li" class="list-group-item li">
                 <div id="icone">
                     <p class="turma">Turma:</p>
-                    <span class="iconify livro" data-icon="bx:book-reader" style="color: #05204a;" data-width="100"
-                        data-height="100"></span>
+                    <span class="iconify livro" data-icon="bx:book-reader" style="color: #05204a;" data-width="100" data-height="100"></span>
                     <p class="nome">NOME</p>
                 </div>
                 <div class="button">
-                    <button onclick="showModalTurma()" class="segundo_botao">INFORMAÇÕES SOBRE A TURMA</button>
-                    <button onclick="showModal()" class="terceiro_botao">NOVO USUÁRIO</button>
+                    <button onclick="showModalTurma()" class="terceiro_botao">SOBRE A TURMA</button>
+                    <button onclick="showModal()" class="segundo_botao">NOVO USUÁRIO</button>
                 </div>
             </li>
 
@@ -60,13 +56,12 @@
             <li id="li" class="list-group-item li">
                 <div id="icone">
                     <p class="turma">Turma:</p>
-                    <span class="iconify livro" data-icon="bx:book-reader" style="color: #05204a;" data-width="100"
-                        data-height="100"></span>
+                    <span class="iconify livro" data-icon="bx:book-reader" style="color: #05204a;" data-width="100" data-height="100"></span>
                     <p class="nome">NOME</p>
                 </div>
                 <div class="button">
-                    <button onclick="showModalTurma()" class="segundo_botao">INFORMAÇÕES SOBRE A TURMA</button>
-                    <button onclick="showModal()" class="terceiro_botao">NOVO USUÁRIO</button>
+                    <button onclick="showModalTurma()" class="terceiro_botao">SOBRE A TURMA</button>
+                    <button onclick="showModal()" class="segundo_botao">NOVO USUÁRIO</button>
                 </div>
             </li>
 
@@ -75,13 +70,12 @@
             <li id="li" class="list-group-item li">
                 <div id="icone">
                     <p class="turma">Turma:</p>
-                    <span class="iconify livro" data-icon="bx:book-reader" style="color: #05204a;" data-width="100"
-                        data-height="100"></span>
+                    <span class="iconify livro" data-icon="bx:book-reader" style="color: #05204a;" data-width="100" data-height="100"></span>
                     <p class="nome">NOME</p>
                 </div>
                 <div class="button">
-                    <button onclick="showModalTurma()" class="segundo_botao">INFORMAÇÕES SOBRE A TURMA</button>
-                    <button onclick="showModal()" class="terceiro_botao">NOVO USUÁRIO</button>
+                    <button onclick="showModalTurma()" class="terceiro_botao">SOBRE A TURMA</button>
+                    <button onclick="showModal()" class="segundo_botao">NOVO USUÁRIO</button>
                 </div>
             </li>
 
@@ -90,13 +84,12 @@
             <li id="li" class="list-group-item li">
                 <div id="icone">
                     <p class="turma">Turma:</p>
-                    <span class="iconify livro" data-icon="bx:book-reader" style="color: #05204a;" data-width="100"
-                        data-height="100"></span>
+                    <span class="iconify livro" data-icon="bx:book-reader" style="color: #05204a;" data-width="100" data-height="100"></span>
                     <p class="nome">NOME</p>
                 </div>
                 <div class="button">
-                    <button onclick="showModalTurma()" class="segundo_botao">INFORMAÇÕES SOBRE A TURMA</button>
-                    <button onclick="showModal()" class="terceiro_botao">NOVO USUÁRIO</button>
+                    <button onclick="showModalTurma()" class="terceiro_botao">SOBRE A TURMA</button>
+                    <button onclick="showModal()" class="segundo_botao">NOVO USUÁRIO</button>
                 </div>
             </li>
 
@@ -105,13 +98,12 @@
             <li id="li" class="list-group-item li">
                 <div id="icone">
                     <p class="turma">Turma:</p>
-                    <span class="iconify livro" data-icon="bx:book-reader" style="color: #05204a;" data-width="100"
-                        data-height="100"></span>
+                    <span class="iconify livro" data-icon="bx:book-reader" style="color: #05204a;" data-width="100" data-height="100"></span>
                     <p class="nome">NOME</p>
                 </div>
                 <div class="button">
-                    <button onclick="showModalTurma()" class="segundo_botao">INFORMAÇÕES SOBRE A TURMA</button>
-                    <button onclick="showModal()" class="terceiro_botao">NOVO USUÁRIO</button>
+                    <button onclick="showModalTurma()" class="terceiro_botao">SOBRE A TURMA</button>
+                    <button onclick="showModal()" class="segundo_botao">NOVO USUÁRIO</button>
                 </div>
             </li>
 
@@ -120,13 +112,12 @@
             <li id="li" class="list-group-item li">
                 <div id="icone">
                     <p class="turma">Turma:</p>
-                    <span class="iconify livro" data-icon="bx:book-reader" style="color: #05204a;" data-width="100"
-                        data-height="100"></span>
+                    <span class="iconify livro" data-icon="bx:book-reader" style="color: #05204a;" data-width="100" data-height="100"></span>
                     <p class="nome">NOME</p>
                 </div>
                 <div class="button">
-                    <button onclick="showModalTurma()" class="segundo_botao">INFORMAÇÕES SOBRE A TURMA</button>
-                    <button onclick="showModal()" class="terceiro_botao">NOVO USUÁRIO</button>
+                    <button onclick="showModalTurma()" class="terceiro_botao">SOBRE A TURMA</button>
+                    <button onclick="showModal()" class="segundo_botao">NOVO USUÁRIO</button>
                 </div>
             </li>
 
@@ -135,13 +126,12 @@
             <li id="li" class="list-group-item li">
                 <div id="icone">
                     <p class="turma">Turma:</p>
-                    <span class="iconify livro" data-icon="bx:book-reader" style="color: #05204a;" data-width="100"
-                        data-height="100"></span>
+                    <span class="iconify livro" data-icon="bx:book-reader" style="color: #05204a;" data-width="100" data-height="100"></span>
                     <p class="nome">NOME</p>
                 </div>
                 <div class="button">
-                    <button onclick="showModalTurma()" class="segundo_botao">INFORMAÇÕES SOBRE A TURMA</button>
-                    <button onclick="showModal()" class="terceiro_botao">NOVO USUÁRIO</button>
+                    <button onclick="showModalTurma()" class="terceiro_botao">SOBRE A TURMA</button>
+                    <button onclick="showModal()" class="segundo_botao">NOVO USUÁRIO</button>
                 </div>
             </li>
 
@@ -150,8 +140,7 @@
             <li id="li" class="list-group-item li">
                 <div id="icone">
                     <p class="turma">Turma:</p>
-                    <span class="iconify livro" data-icon="bx:book-reader" style="color: #05204a;" data-width="100"
-                        data-height="100"></span>
+                    <span class="iconify livro" data-icon="bx:book-reader" style="color: #05204a;" data-width="100" data-height="100"></span>
                     <p class="nome">NOME</p>
                 </div>
                 <div class="button">
@@ -220,8 +209,7 @@
 
             <div class="col-md-6 lab-inp">
                 <label for="numero-estudantes" class="form-label">Número de estudantes</label>
-                <input type="email" class="form-control numero-estudantes" placeholder="Universidade De Curitiba "
-                    disabled>
+                <input type="email" class="form-control numero-estudantes" placeholder="Universidade De Curitiba " disabled>
             </div>
 
             <div class="col-md-6 lab-inp">
@@ -260,8 +248,7 @@
             <ul class="list-group" id="ul-turma">
                 <li id="li" class="list-group-item li">
                     <div id="icone">
-                        <span class="iconify" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
-                            data-width="100" data-height="100"></span>
+                        <span class="iconify" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;" data-width="100" data-height="100"></span>
                         <p class="nome">NOME</p>
                     </div>
                     <div class="button">
@@ -273,8 +260,7 @@
 
                 <li id="li" class="list-group-item li">
                     <div id="icone">
-                        <span class="iconify" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
-                            data-width="100" data-height="100"></span>
+                        <span class="iconify" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;" data-width="100" data-height="100"></span>
                         <p class="nome">NOME</p>
                     </div>
                     <div class="button">
@@ -286,8 +272,7 @@
 
                 <li id="li" class="list-group-item li">
                     <div id="icone">
-                        <span class="iconify" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
-                            data-width="100" data-height="100"></span>
+                        <span class="iconify" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;" data-width="100" data-height="100"></span>
                         <p class="nome">NOME</p>
                     </div>
                     <div class="button">
@@ -299,8 +284,7 @@
 
                 <li id="li" class="list-group-item li">
                     <div id="icone">
-                        <span class="iconify" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
-                            data-width="100" data-height="100"></span>
+                        <span class="iconify" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;" data-width="100" data-height="100"></span>
                         <p class="nome">NOME</p>
                     </div>
                     <div class="button">
@@ -312,8 +296,7 @@
 
                 <li id="li" class="list-group-item li">
                     <div id="icone">
-                        <span class="iconify" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
-                            data-width="100" data-height="100"></span>
+                        <span class="iconify" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;" data-width="100" data-height="100"></span>
                         <p class="nome">NOME</p>
                     </div>
                     <div class="button">
