--- a/instituicao/usuarios/visualizacao/index.html
+++ b/instituicao/usuarios/visualizacao/index.html
@@ -4,12 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link
-        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <script src="https://code.iconify.design/2/2.1.2/iconify.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
@@ -27,7 +24,7 @@
             <img src="../../componentes/header/img/grupo_pessoas.svg" alt="grupo_pessoas">
             <h1 id="nomeInstituicao">NOME DA INSTITUIÇÃO</h1>
         </div>
-        
+
         <a href="../../index.html">
             <img src="../../componentes/header/img/perfil_instituicao.svg" alt="perfil">
         </a>
@@ -50,8 +47,7 @@
                 <ul class="list-group" id="ul">
                     <li id="li" class="list-group-item li" onclick="showModal()">
                         <div id="icone">
-                            <span class="iconify" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
-                                data-width="100" data-height="100"></span>
+                            <span class="iconify" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;" data-width="100" data-height="100"></span>
                             <p class="nome">NOME</p>
                         </div>
                         <div class="button">
@@ -63,8 +59,7 @@
 
                     <li id="li" class="list-group-item li" onclick="showModal()">
                         <div id="icone">
-                            <span class="iconify" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
-                                data-width="100" data-height="100"></span>
+                            <span class="iconify" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;" data-width="100" data-height="100"></span>
                             <p class="nome">NOME</p>
                         </div>
                         <div class="button">
@@ -76,8 +71,7 @@
 
                     <li id="li" class="list-group-item li" onclick="showModal()">
                         <div id="icone">
-                            <span class="iconify" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
-                                data-width="100" data-height="100"></span>
+                            <span class="iconify" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;" data-width="100" data-height="100"></span>
                             <p class="nome">NOME</p>
                         </div>
                         <div class="button">
@@ -89,8 +83,7 @@
 
                     <li id="li" class="list-group-item li" onclick="showModal()">
                         <div id="icone">
-                            <span class="iconify" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
-                                data-width="100" data-height="100"></span>
+                            <span class="iconify" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;" data-width="100" data-height="100"></span>
                             <p class="nome">NOME</p>
                         </div>
                         <div class="button">
@@ -102,8 +95,7 @@
 
                     <li id="li" class="list-group-item li" onclick="showModal()">
                         <div id="icone">
-                            <span class="iconify" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
-                                data-width="100" data-height="100"></span>
+                            <span class="iconify" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;" data-width="100" data-height="100"></span>
                             <p class="nome">NOME</p>
                         </div>
                         <div class="button">
@@ -115,8 +107,7 @@
 
                     <li id="li" class="list-group-item li" onclick="showModal()">
                         <div id="icone">
-                            <span class="iconify" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
-                                data-width="100" data-height="100"></span>
+                            <span class="iconify" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;" data-width="100" data-height="100"></span>
                             <p class="nome">NOME</p>
                         </div>
                         <div class="button">
@@ -128,8 +119,7 @@
 
                     <li id="li" class="list-group-item li" onclick="showModal()">
                         <div id="icone">
-                            <span class="iconify" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
-                                data-width="100" data-height="100"></span>
+                            <span class="iconify" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;" data-width="100" data-height="100"></span>
                             <p class="nome">NOME</p>
                         </div>
                         <div class="button">
@@ -141,8 +131,7 @@
 
                     <li id="li" class="list-group-item li" onclick="showModal()">
                         <div id="icone">
-                            <span class="iconify" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
-                                data-width="100" data-height="100"></span>
+                            <span class="iconify" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;" data-width="100" data-height="100"></span>
                             <p class="nome">NOME</p>
                         </div>
                         <div class="button">
@@ -154,8 +143,7 @@
 
                     <li id="li" class="list-group-item li" onclick="showModal()">
                         <div id="icone">
-                            <span class="iconify" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
-                                data-width="100" data-height="100"></span>
+                            <span class="iconify" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;" data-width="100" data-height="100"></span>
                             <p class="nome">NOME</p>
                         </div>
                         <div class="button">
@@ -166,20 +154,21 @@
             </div>
         </div>
 
+
+        <a href="../cadastro/index.html"> <button type="button" class="addCurso button5"> <i class="fa fa-plus" style="font-size:36px"></i></button></a>
+
         <div class="container mt-5 container modal">
             <h1>NOME DO USUARIO</h1>
             <form class="row g-7">
 
                 <div class="col-md-12 lab-inp">
                     <label for="nome_do_usuario" class="form-label">Nome do usuário</label>
-                    <input type="text" class="form-control nome_do_usuario" placeholder="unicuritiba@gmail.com"
-                        disabled>
+                    <input type="text" class="form-control nome_do_usuario" placeholder="unicuritiba@gmail.com" disabled>
                 </div>
 
                 <div class="col-md-6 lab-inp">
                     <label for="email_usuario" class="form-label">Email do usuário</label>
-                    <input type="email" class="form-control email_usuario" placeholder="Universidade De Curitiba "
-                        disabled>
+                    <input type="email" class="form-control email_usuario" placeholder="Universidade De Curitiba " disabled>
                 </div>
 
                 <div class="col-md-6 lab-inp">
