--- a/professor/cursos/turmas/index.html
+++ b/professor/cursos/turmas/index.html
@@ -598,7 +598,7 @@
                 <button class="segundo_botao" onclick="exitModalExcluirGrupo()" type="button">CANCELAR</button>
             </div>
             <div class="col-md-6">
-                <button class="quarto_botao" onclick="exitModalExcluirGrupo()" type="submit">CONFIRMAR</button>
+                <button class="segundo_botao" id="btnConfirmarExclusao" onclick="exitModalExcluirGrupo()" type="submit">CONFIRMAR</button>
             </div>
         </div>
     </div>
