--- a/professor/cursos/turmas/index.html
+++ b/professor/cursos/turmas/index.html
@@ -20,6 +20,11 @@
         href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
     <script src="scripts.js" defer></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.0/css/select2.min.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.0/js/select2.min.js"></script>
     <title>Minhas Turmas</title>
 </head>
 
@@ -568,17 +573,17 @@
             <div class="col-md-6 lab-inp">
                 <label for="nomeNovoGrupo" class="form-label">Nome:</label>
                 <input type="text" class="form-control novo-grupo" id="inputNomeNovoGrupoModal" placeholder="Grupo 3"
-                    maxlength="255">
+                    maxlength="255" required>
             </div>
 
             <div class="col-md-6 lab-inp">
-                <label for="numero-estudantes" class="form-label">Número do grupo:</label>
-                <input type="text" class="form-control numero-estudantes" id="inputNumeroEstudantesModal" placeholder="3" maxlength="255">
+                <label for="numeracao-novo-grupo" class="form-label">Número do grupo:</label>
+                <input type="text" class="form-control numeracao-novo-grupo" id="inputNumeracaoNovoGrupoModal" placeholder="3" onkeypress="isInputNumber(event)" maxlength="255" required>
             </div>
 
-            <div class="col-md-6 lab-inp" id="professoresNovoGrupo">
-                <label for="tipo-select" class="form-label">Curso:</label>
-                <select class="form-select mul-select" multiple="true" required>
+            <div class="col-md-12 lab-inp" id="professoresNovoGrupo">
+                <label for="tipo-select" class="form-label">Professores que farão parte:</label>
+                <select class="mul-select" multiple="true" id="selectProfessoresNovoGrupo" required>
                     <option value="Cambodia">Cambodia</option>
                     <option value="Khmer">Khmer</option>
                     <option value="Thiland">Thiland</option>
@@ -595,11 +600,18 @@
                 </div>
 
                 <div class="col-md-3">
-                    <button class="terceiro_botao" onclick="showModalMembros()" type="submit"
+                    <button class="terceiro_botao" type="submit"
                         id="membrosTurmaModal">CRIAR</button>
                 </div>
             </div>
         </form>
+
+        <script>
+            $(document).ready(function () {
+                $(".mul-select").select2({});
+            });
+        </script>
+
     </div>
 
     <div class="container modal modal-excluir-grupo" id="modal-excluir-grupo">
