--- a/professor/cursos/turmas/grupo/index.html
+++ b/professor/cursos/turmas/grupo/index.html
@@ -81,25 +81,19 @@
         </a>
     </header>
 
-    <main>
+<main>
+
+<form action="">
+
     <div class="grupo">
         <div class="tema">
             <h1>Tema do projeto:</h1>
-            <p id="textTemaProjetoGrupo">
-                Sistema para gerenciamento de Trabalho de Conclusão de Curso
-            </p>
+            <input type="text" id="inputTemaProjetoGrupo" value="Sistema para Gerenciamento de Trabalhos de Conclusão de Curso" required maxlength="255">
         </div>
 
         <div class="descricao">
             <h1>Descrição do projeto:</h1>
-            <div contenteditable="true">
-                <p id="textDescricaoProjetoGrupo">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur
-                    tincidunt nisl velit, in dapibus lectus tristique vitae. Ut ut
-                    ullamcorper tortor. Nullam sed velit diam. Suspendisse vehicula
-                    lacinia fermentum. Sed non ultricies lacus.
-                </p>
-            </div>
+            <input type="text" id="textDescricaoProjetoGrupo" value="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur tincidunt nisl velit, in dapibus lectus tristique vitae. Ut ut ullamcorper tortor. Nullam sed velit diam. Suspendisse vehicula lacinia fermentum. Sed non ultricies lacus." required>
         </div>
 
         <div class="cont-integrantes">
@@ -303,6 +297,16 @@
             </ul>
         </div>
 
+        <div class="data-apresentacao">
+            <h1>Data da apresentação:</h1>
+            <input type="date" id="inputDataApresentacaoProjetoGrupo" value="10/12/2016">
+        </div>
+
+        <div class="hora-apresentacao">
+            <h1>Hora da apresentação:</h1>
+            <input type="time" id="inputHoraApresentacaoProjetoGrupo" value="7:30">
+        </div>
+
         <div class="barra_progresso">
             <label>Andamento do projeto:</label>
             <div class="progress">
@@ -316,12 +320,15 @@
         <div class="col-md-3 documentacao_div">
             <div class="documentacao">
                 <label>Documentação do projeto:</label>
-                <a href=""><button type="button" class="primeiro_botao">
+                <a href=""><button type="button" class="primeiro_botao" id="btnVerDocumentacao">
                         VISUALIZAR PDF
                     </button></a>
             </div>
+        <button type="submit" class="primeiro_botao" id="btnSalvarAlteracoes">SALVAR ALTERAÇÕES</button>
         </div>
+    
     </div>
+</form>
 </main>
 
     <script>
