--- a/instituicao/cursos/turmas/vizualizacao_grupo/index.html
+++ b/instituicao/cursos/turmas/vizualizacao_grupo/index.html
@@ -8,14 +8,68 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous" />
     <script src="https://code.iconify.design/2/2.1.2/iconify.min.js"></script>
+    <link href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css" rel="stylesheet" />
     <link
         href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="../../../componentes/side_menu/styles_side_menu.css">
     <title>GRUPO</title>
 </head>
 
 <body>
+    <div class="sidebar">
+        <div class="logo-details">
+            <img class="icon" src="../../../../home/images-global/logo-branca.svg" alt="logo" />
+            <i class="bx bx-menu" id="btn"></i>
+        </div>
+            <li>
+                <a href="../../index.html">
+                    <i class="bx bx-group"></i>
+                    <span class="links_name">Cursos existentes</span>
+                </a>
+                <span class="tooltip">Cursos</span>
+            </li>
+            <li>
+                <a href="../../../usuarios/index.html">
+                    <i class="bx bx-user"></i>
+                    <span class="links_name">Usuários cadastrados</span>
+                </a>
+                <span class="tooltip">Usuários</span>
+            </li>
+            <li>
+                <a href="#">
+                    <i class="bx bx-edit"></i>
+                    <span class="links_name">Formulário da banca</span>
+                </a>
+                <span class="tooltip">Avaliações</span>
+            </li>
+            <li class="profile">
+                <a href="../../../../home/login/index.html">
+                    <i class="bx bx-log-out" id="log_out"></i>
+                    <span class="links_name">Log Out</span>
+                </a>
+                <span class="tooltip">Log Out</span>
+            </li>
+    </div>
+
+    <script>
+        let sidebar = document.querySelector(".sidebar");
+        let closeBtn = document.querySelector("#btn");
+
+        closeBtn.addEventListener("click", () => {
+            sidebar.classList.toggle("open");
+            menuBtnChange();
+        });
+
+        function menuBtnChange() {
+            if (sidebar.classList.contains("open")) {
+                closeBtn.classList.replace("bx-menu", "bx-menu-alt-right");
+            } else {
+                closeBtn.classList.replace("bx-menu-alt-right", "bx-menu");
+            }
+        }
+    </script>
     <div class="grupo">
         <div class="tema">
             <h1>Tema do projeto:</h1>
