--- a/instituicao/index.html
+++ b/instituicao/index.html
@@ -32,14 +32,14 @@
     </div>
     
       <li>
-        <a href="#">
+        <a href="./turmas/index.html">
           <i class="bx bx-group"></i>
           <span class="links_name">Turmas existentes</span>
         </a>
         <span class="tooltip">Turmas</span>
       </li>
       <li>
-        <a href="#">
+        <a href="./usuarios/index.html">
           <i class="bx bx-user"></i>
           <span class="links_name">Usuários cadastrados</span>
         </a>
@@ -60,7 +60,7 @@
         <span class="tooltip">Avaliações</span>
       </li>
       <li class="profile">
-        <a href="#">
+        <a href="../home/login/index.html">
           <i class="bx bx-log-out" id="log_out"></i>
           <span class="links_name">Log Out</span>
         </a>
